Added recorded tests. Fixed issues. Dom and error tests are passed.

--- a/SyntactikJs/package.json
+++ b/SyntactikJs/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "amd-loader": "^0.0.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0"
+  },
   "scripts": {
     "test": "node test.js"
   },
